--- a/LearningCookbook.html
+++ b/LearningCookbook.html
@@ -82,9 +82,9 @@ body {
 
 <a onclick="changeAll()" style="border:1px solid black; margin:20px; padding:20px;">Change All <img src="https://agranchelli.files.wordpress.com/2022/03/next.png" width="40px"></a>
 
-  <br>
-  <br>
-  <a href="https://agranchelli.wordpress.com/learning-cookbook/">About Its Development here</a>
+<div style="height:100px;"></div>
+<a style="margin:20px;" href="https://agranchelli.wordpress.com/learning-cookbook/">Learn About Its Development here</a>
+  
 <script>
 const activities = [
   'Create a problem-based activity',
